# aerial-segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
aerial-seg/: benchmark.py  poc_gradio.py
aerial_segmentation/: LICENSE  README.md  pyproject.toml  requirements.txt
aerial_segmentation/aerialseg/: postprocess.py  utils.py
aerial_segmentation/notebooks/: prediction_scratch.ipynb
aerial_segmentation/scripts/: benchmark.py  fine_tuning_detectron2.py  fine_tuning_detectron2_from_roboflow.py  prediction_batch_detectron2.py  prediction_detectron2.py  prediction_raster_detectron2.py
aerial_segmentation/tests/: test_extract_output_annotations.py
aerialseg/: postprocess.py  utils.py
notebooks/: detectron2onnx.ipynb  export_cpp.ipynb
scripts/: CMakeLists.txt  benchmark.py  density_map.py  fine_tune.py  fine_tuning_detectron2.py  poc_gradio.py  prediction_batch_detectron2.py  prediction_detectron2.py  prediction_raster_detectron2.py
