[metadata]
name = aerial-segmentation
version = 0.1.1
author = SIH
author_email = sih.info@sydney.edu.au
description = PIPE-3956: Aerial segmentation: aerial-segmentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sydney-Informatics-Hub/aerial-segmentation
project_urls =
    Bug Tracker = https://github.com/Sydney-Informatics-Hub/aerial-segmentation/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[flake8]
ignore = E501, W503, E203

[isort]
profile = black
